# learning_summary

./: bugList.docx  learningGit.docx  learningRegularExpression.docx
c++CodeStyle/: codestyle.cc
learningCodeStyle/: Git 提交信息规范——Angular规范
learningCodeStyle/C++整合/: README.md  注意事项总结
learningCodeStyle/C++整合/other/: 其他总结  注意事项总结
learningCodeStyle/C++整合/变量/: 总结
learningCodeStyle/C++整合/命名规范/: 命名总结
learningCodeStyle/C++整合/注释/: 注释总结
learningCodeStyle/Python整合/命名规范/: 命名总结
learningCodeStyle/Python整合/注释/: 注释总结
learningDesignPatterns/: README.md  设计原则.txt
learningDesignPatterns/UML/: 创建型模式.mdj  结构型模式.mdj  行为性模式.mdj
learningDesignPatterns/中介者模式/: Mediator.cpp  README.md
learningDesignPatterns/享元模式/: FlyWeight.cpp  README.md
learningDesignPatterns/代理模式/: Proxy.cpp  README.md
learningDesignPatterns/单例模式/: README.md  Singleton.cpp
learningDesignPatterns/原型模式/: Prototype.cpp  README.md
learningDesignPatterns/命令模式/: Command.cpp  README.md
learningDesignPatterns/备忘录模式/: Memento.cpp  README.md
learningDesignPatterns/外观模式/: Facade.cpp  README.md
learningDesignPatterns/工厂方法模式/: FactoryMethod.cpp  README.md
learningDesignPatterns/建造者模式/: Bulider.cpp  README.md
learningDesignPatterns/抽象工厂模式/: AbstractFactory.cpp  README.md
learningDesignPatterns/桥接模式/: Bridge.cpp  README.md
learningDesignPatterns/模型-视图-控制器模式/: Model-View-Controller.cpp  README.md
learningDesignPatterns/模板方法模式/: README.md  Template.cpp
learningDesignPatterns/状态模式/: README.md  State.cpp
learningDesignPatterns/空对象模式/: NullObject.cpp  README.md
learningDesignPatterns/策略模式/: README.md  Strategy.cpp
learningDesignPatterns/组合模式/: Composite1.cpp  Composite2.cpp  README.md
learningDesignPatterns/职责链模式/: Chain.cpp  README.md
learningDesignPatterns/装饰器模式/: Decorator.cpp  README.md
learningDesignPatterns/观察者模式/: Observer.cpp  README.md
learningDesignPatterns/解释器模式/: Interpreter.cpp  README.md
learningDesignPatterns/访问者模式/: README.md  Visitor.cpp
learningDesignPatterns/迭代器模式/: Iterator1.cpp  Iterator2.cpp  README.md
learningDesignPatterns/适配器模式/: Adapter1.cpp  Adapter2.cpp  README.md
learningGit/: learningGit.docx
learningROS/: CMakeLists.txt
learningRegularExpression/: learningRegularExpression.docx
learningShadowSocks/: install guide of shadowsock-libev  科学上网教程.docx
learningShadowSocks/ShadowSock-libev安装教程/: shadowsock-libev安装教程.md
learningShadowSocks/ShadowSock安装教程/: Shadowsock安装教程.md
learningShadowSocks/搬瓦工注册教程/: 搬瓦工注册教程.md
learningVSCode/: leaningVSCode.md
learningVim/: learningVim.docx
